fix layout on mobile

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -9,7 +9,6 @@
     padding-top: 40px;
     padding-bottom: 40px;
     transition: 0.3s;
-    min-height: 10vh;
 
     &.header-scroll {
       background: #010101;
@@ -72,6 +71,14 @@
           }
         }
       }
+    }
+  }
+}
+
+@media(max-width: 767px){
+  .site{
+    &-header{
+      min-height: 10vh;
     }
   }
 }
