--- a/src/app/components/sections/specifications/specifications.component.scss
+++ b/src/app/components/sections/specifications/specifications.component.scss
@@ -1,10 +1,14 @@
 .section {
   &__specifiche {
-    padding-top: 120px;
+
 
     h3 {
       text-transform: uppercase;
       margin-bottom: 30px;
+
+      @media(max-width:768px) {
+        text-align: center;
+      }
     }
 
     .img {
@@ -12,6 +16,10 @@
         margin-top: -35px;
         width: 85%;
       }
+    }
+
+    @media(min-width: 769px){
+      padding-top: 120px;
     }
   }
 }
